# ChangeLog for dev-java/javatoolkit
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jan 2008; <alistair@gentoo.org> +javatoolkit-9999.ebuild:
  Add javatoolkit svn ebuild
