@@ -1,3 +1,3 @@
-EBUILD javatoolkit-9999.ebuild 560 RMD160 66f4ed85681abc878de0c3c0dfb39b2d7288f524 SHA1 43e62f2fcb0638733356f87243355779a3a9ac03 SHA256 96de43af2283b69d20161f8cb5945615978044ca97b02a604f1aeaad725e5400
-MISC ChangeLog 214 RMD160 7d28f8a6b73d366e3d06398b8e4ef21ff21e32b2 SHA1 974d8210c690282f5ef3c3b47646267e1996208d SHA256 d1803725da763f122d1e7bca4ee1230d72d770a05d5acb59e2254ae90daea1ba
+EBUILD javatoolkit-9999.ebuild 660 RMD160 86dead646b62a8cf596fc1272d9fa5e10c09935f SHA1 6c1e52bead1b5a4bf6371ae7ad7cb98c20778ecc SHA256 635d6e0b6dd9e80ac8cf1ce481a268e172a5ab523a5cd27f3e59adaa06175bc5
+MISC ChangeLog 311 RMD160 d3d10b8a405a45cb78030ef8d7c74297768ad17b SHA1 11f12843a2daed0dbb5a0f0b1cf9a02106ce53fc SHA256 36c5c269011937f0fe47dd761c6416e20b5b6cd808014418111c1c615c244774
 MISC metadata.xml 205 RMD160 934c811ce2118963118b8ad86da1ec2814dd285f SHA1 f75079bfb666a750926732a1606474fee17093df SHA256 e319f1701f6be29c8e077049d77738b69b72be0458754ef90ad9a684f2ec1722
